--- a/ApplicationWebEvenements/ApplicationWebEvenements/Views/Home/Index.cshtml
+++ b/ApplicationWebEvenements/ApplicationWebEvenements/Views/Home/Index.cshtml
@@ -1,8 +1,17 @@
-﻿@{
+﻿@model IEnumerable<Utilisateur>;
+@{
     ViewData["Title"] = "Home Page";
+
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <table>
+        @foreach (var u in Model)
+        {
+            <tr>@u.NomUtilisateur</tr>
+            <tr>@u.DateCreation</tr>
+        }
+    </table>
 </div>
