--- a/ApplicationWebEvenements/ApplicationWebEvenements/Views/Main/Index.cshtml
+++ b/ApplicationWebEvenements/ApplicationWebEvenements/Views/Main/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Événements récents";
 }
 
-<div class="container text-center">
+<div class="text-center">
     <div class="row justify-content-center">
         <h1 class="display-4">Liste événements</h1>
         <table class="table">
@@ -13,5 +13,5 @@
     </div>
 </div>
 <script src="~/js/signalr/signalr.js"></script>
-<script src="~/js/signalr/refresh.js"></script>
+<script src="~/js/signalr/refreshEvenements.js"></script>
         
