--- a/ApplicationWebEvenements/ApplicationWebEvenements/Views/Authentification/Succes.cshtml
+++ b/ApplicationWebEvenements/ApplicationWebEvenements/Views/Authentification/Succes.cshtml
@@ -13,7 +13,7 @@
             <div>
                 <hr />
                 <div>
-                    @Html?.Partial("Connexion.cshtml");
+                    @Html?.PartialAsync("Connexion.cshtml");
                 </div>
                 <hr />
             </div>
