--- a/ApplicationWebEvenements/ApplicationWebEvenements/Views/Main/Index.cshtml
+++ b/ApplicationWebEvenements/ApplicationWebEvenements/Views/Main/Index.cshtml
@@ -2,16 +2,17 @@
     ViewData["Title"] = "Événements récents";
 }
 
-<div class="text-center">
-    <div class="row justify-content-center">
-        <h1 class="display-4">Liste événements</h1>
-        <table class="table">
-            <tbody id="tableEvenements">
+<div class="row">
+    <h1 class="display-4">@ViewData["Title"]</h1>
+    <div class="col-md-12 justify-content-center">
+        <div id="conteneurEvens" class="card-deck">
 
-            </tbody>
-        </table>
+        </div>
+    </div>
+    <div id="loading">
+        <div class="spinner-border text-primary"></div>
     </div>
 </div>
 <script src="~/js/signalr/signalr.js"></script>
-<script src="~/js/signalr/refreshEvenements.js"></script>
+<script src="~/js/signalr/refreshRecent.js"></script>
         
