--- a/ApplicationWebEvenements/ApplicationWebEvenements/Views/Main/MesEvenements.cshtml
+++ b/ApplicationWebEvenements/ApplicationWebEvenements/Views/Main/MesEvenements.cshtml
@@ -3,7 +3,7 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>À faire</p>
+@model List<Evenement>
 
 <div class="row">
     <div class="col-md-12" id="menusMesEvens">
@@ -27,35 +27,75 @@
             </div>
             <div id="crees" class="collapse" data-parent="#menusMesEvens">
                 <div class="card-body">
-                    Mettre la liste des événements crées ici
-                <div class="card-footer">
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="modalCreation">
-                        &#43; Nouvel événement
-                    </button>
+                    @foreach(var e in Model)
+                    {
+                    <div class="card">
+                        <img class="card-img-top" src="@e.LienImage" alt="Image">
+                        <div class="card-header">
+                            <h3>@e.NomEvenement</h3>
+                        </div>
+                        <div class="card-body">
+                            <ul>
+                                <li>@e.Location</li>
+                                <li>@e.GetDateFormatée()</li>
+                                <li>@e.Organisateur.NomUtilisateur</li>
+                                <li>@e.Description</li>
+                            </ul>
+                        </div>
+                        <div class="card-footer">
+                            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalModification">
+                                Modifier/Annuler
+                            </button>
 
-                    <!-- Dialogue de création d'événement -->
-                    <div class="modal" id="modalCreation">
-                        <div class="modal-dialog-centered">
-                            <div class="modal-content">
-                                <!-- Entête -->
-                                <div class="modal-header">
-                                    <h3 class="modal-title">Créer un nouvel événement</h3>
-                                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                            <!-- Dialogue de modification d'événement -->
+                            <div class="modal" id="modalModification">
+                                <div class="modal-dialog modal-dialog-centered modal-lg">
+                                    <div class="modal-content">
+                                        <!-- Entête -->
+                                        <div class="modal-header">
+                                            <h3 class="modal-title">Modifier l'événement</h3>
+                                            <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                        </div>
+                                        <!-- Corps -->
+                                        <div class="modal-body">
+                                            Insérer formulaire ici
+                                        </div>
+                                    </div>
                                 </div>
-                                <!-- Corps -->
-                                <div class="modal-body">
-                                    Insérer formulaire ici
-                                </div>
-                                <!-- Pied -->
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-primary">Créer</button>
+                            </div>
+                        </div>
+                    </div>
+                    }
+                    <div class="card-footer">
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalCreation">
+                            &#43; Nouvel événement
+                        </button>
+
+                        <!-- Dialogue de création d'événement -->
+                        <div class="modal" id="modalCreation">
+                            <div class="modal-dialog modal-dialog-centered modal-lg">
+                                <div class="modal-content">
+                                    <!-- Entête -->
+                                    <div class="modal-header">
+                                        <h3 class="modal-title">Créer un nouvel événement</h3>
+                                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                    </div>
+                                    <!-- Corps -->
+                                    <div class="modal-body">
+                                        Insérer formulaire ici
+                                    </div>
+                                    <!-- Pied -->
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-primary">Créer</button>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                </div>
             </div>
         </div>
     </div>
 </div>
+<script src="~/js/signalr/signalr.js"></script>
+<script src="~/js/signalr/refreshMesEvens.js"></script>
