--- a/ApplicationWebEvenements/ApplicationWebEvenements/Views/Authentification/Login.cshtml
+++ b/ApplicationWebEvenements/ApplicationWebEvenements/Views/Authentification/Login.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Connexion";
 }
 
-@model Utilisateur
+@model ValidationUtilisateur
 
 <head>
     <style>
@@ -24,25 +24,25 @@
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close"></button>
                         <span aria-hidden="true">&times;</span>
                     </div> } }
-        <div>
-            <br />
-            <form asp-controller="Authentification" asp-action="Login" method="post">
-                <h1>Connexion</h1>
+            <div>
                 <br />
-                <label asp-for="NomUtilisateur">
-                    <strong>Nom utilisateur</strong>
-                </label>
-                <input class="form-control" asp-for="NomUtilisateur" type="text" placeholder="Nom utilisateur" required />
-                <label asp-for="MotDePasse">
-                    <strong>Mot de passe</strong>
-                </label>
-                <input class="form-control" asp-for="MotDePasse" type="Password" placeholder="Mot de passe" required />
-                <br />
-                <div class="d-flex justify-content-center">
-                    <button asp-controller="Authentification" asp-action="Signup" class="btn btn-primary btn-lg center">Connexion</button>
-                </div>
-            </form>
-        </div>
+                <form asp-controller="Authentification" asp-action="Login" method="post">
+                    <h1>Connexion</h1>
+                    <br />
+                    <label asp-for="NomUtilisateur">
+                        <strong>Nom utilisateur</strong>
+                    </label>
+                    <input class="form-control" asp-for="NomUtilisateur" type="text" placeholder="Nom utilisateur" required />
+                    <label asp-for="MotDePasse">
+                        <strong>Mot de passe</strong>
+                    </label>
+                    <input class="form-control" asp-for="MotDePasse" type="Password" placeholder="Mot de passe" required />
+                    <br />
+                    <div class="d-flex justify-content-center">
+                        <button asp-controller="Authentification" asp-action="Login" class="btn btn-primary btn-lg center">Connexion</button>
+                    </div>
+                </form>
+            </div>
             <br />
             <br />
             <div class="justify-content-center text-center">
