--- a/ApplicationWebEvenements/ApplicationWebEvenements/Views/Authentification/Login.cshtml
+++ b/ApplicationWebEvenements/ApplicationWebEvenements/Views/Authentification/Login.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Connexion";
 }
 
-@model ValidationUtilisateur
+@model Utilisateur
 
 <head>
     <style>
@@ -13,9 +13,9 @@
     </style>
 </head>
 <body>
-    <div class="wrapper">
-        <div></div>
-        <div>
+    <div>
+        <div class="wrapper">
+            <div></div>
             @{ var msg = ViewBag?.messageErreur;
                 if (msg == "echec_connexion")
                 {
@@ -23,32 +23,40 @@
                         Nom d'utilisateur ou mot de passe invalide.
                         <button type="button" class="close" data-dismiss="alert" aria-label="Close"></button>
                         <span aria-hidden="true">&times;</span>
-                    </div> } }
-            <div>
+                    </div> }
+            }
+            @using (Html.BeginForm())
+            {
                 <br />
-                <form asp-controller="Authentification" asp-action="Login" method="post">
-                    <h1>Connexion</h1>
+                <h1>Connexion</h1>
+                <br />
+                <div>
+                    <strong>@Html.LabelFor(model => model.NomUtilisateur)</strong>
+                    @Html.EditorFor(model => model.NomUtilisateur, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.NomUtilisateur, "", new { @class = "text-danger" })
                     <br />
-                    <label asp-for="NomUtilisateur">
-                        <strong>Nom utilisateur</strong>
-                    </label>
-                    <input class="form-control" asp-for="NomUtilisateur" type="text" placeholder="Nom utilisateur" required />
-                    <label asp-for="MotDePasse">
-                        <strong>Mot de passe</strong>
-                    </label>
-                    <input class="form-control" asp-for="MotDePasse" type="Password" placeholder="Mot de passe" required />
+                </div>
+                <div>
+                    <strong>@Html.LabelFor(model => model.MotDePasse)</strong>
+                    @Html.PasswordFor(model => model.MotDePasse, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.MotDePasse, "", new { @class = "text-danger" })
                     <br />
-                    <div class="d-flex justify-content-center">
-                        <button asp-controller="Authentification" asp-action="Login" class="btn btn-primary btn-lg center">Connexion</button>
-                    </div>
-                </form>
-            </div>
+                </div>
+                <br />
+                <div class="d-flex justify-content-center">
+                    <button asp-controller="Authentification" asp-action="Login" class="btn btn-primary btn-lg center">Connexion</button>
+                </div>
+            }
+        </div>
+        <br />
+        <br />
+        <div class="justify-content-center text-center">
+            <h3>Pas de compte?</h3>
             <br />
-            <br />
-            <div class="justify-content-center text-center">
-                <h3>Pas de compte?</h3>
-                <a class="btn btn-primary" asp-controller="Authentification" asp-action="Signup">Créer un compte</a>
-            </div>
+            <a class="btn btn-primary" asp-controller="Authentification" asp-action="Signup">Créer un compte</a>
         </div>
         <div></div>
+    </div>
+    </div>
 </body>
+
