--- a/ApplicationWebEvenements/ApplicationWebEvenements/Views/Authentification/Signup.cshtml
+++ b/ApplicationWebEvenements/ApplicationWebEvenements/Views/Authentification/Signup.cshtml
@@ -19,6 +19,13 @@
             {
                 <h1>Création d'un compte</h1>
                 <br />
+                if (ViewBag?.messageErreur != null)
+                {
+                    <div class="alert alert-danger alert-dismissible" role="alert">
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                        <strong>@ViewBag.messageErreur</strong>
+                    </div>
+                }
                 <div>
                     <strong>@Html.LabelFor(model => model.NomUtilisateur)</strong>
                     @Html.EditorFor(model => model.NomUtilisateur, new { htmlAttributes = new { @class = "form-control" } })
