Début d'une section 'mon compte'

--- a/ApplicationWebEvenements/ApplicationWebEvenements/Views/Shared/_Layout.cshtml
+++ b/ApplicationWebEvenements/ApplicationWebEvenements/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                             </li>
                         </ul>
                         <div class="justify-content-xl-end">
-                            <a class="nav-link text-white" asp-area="" asp-controller="Main" asp-action="GestionCompte">Gestion du compte</a>
+                            <a class="nav-link text-white" asp-area="" asp-controller="Compte" asp-action="Index">Gestion du compte</a>
                             <a class="nav-link text-white" asp-area="" asp-controller="Authentification" asp-action="Logoff">
                                 Déconnexion (@Context.Session.GetString("nomLogin"))
                             </a>
