correction d'une petite erreur dans le merge

--- a/ApplicationWebEvenements/ApplicationWebEvenements/Views/Main/MesEvenements.cshtml
+++ b/ApplicationWebEvenements/ApplicationWebEvenements/Views/Main/MesEvenements.cshtml
@@ -52,7 +52,7 @@
             </div>
             <div id="crees" class="collapse" data-parent="#menusMesEvens">
                 <div class="card-body">
-                    @foreach (var e in Model)
+                    @foreach (var e in Model.listeCrees)
                     {
                         <div class="card">
                             <img class="card-img-top" src="@e.LienImage" alt="Image">
